add repeat primer design