@@ -40,9 +40,11 @@ import japsa.seq.Sequence;
 import japsa.seq.SequenceOutputStream;
 import japsa.seq.SequenceReader;
 import japsa.util.CommandLine;
+import japsa.util.Logging;
 import japsa.util.deploy.Deployable;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.util.ArrayList;
 import java.util.HashMap;
 
@@ -63,11 +65,11 @@ public class RepeatPrimerCmd extends CommandLine{
 		addString("tr", null, "Name of the tandem repeat file", true);
 		addInt("flank", 300, "Length of flanking regions");
 		addInt("pad", 30,	 "Pad to the primers for more specific mappings");
-		
+
 		addString("primer_exe", "primer3_core", "Path to primer3  ");
 		addString("bwa_exe", "bwa", "Path to bwa for checking");
-		
-		
+
+
 		addStdHelp();		
 	} 
 
@@ -78,7 +80,7 @@ public class RepeatPrimerCmd extends CommandLine{
 		/**********************************************************************/
 
 		String input = cmdLine.getStringVal("input");
-		int flanking = cmdLine.getIntVal("flanking");
+		int flanking = cmdLine.getIntVal("flank");
 		int pad = cmdLine.getIntVal("pad");
 		// int pad = 30;
 		int gap = 5 + pad;
@@ -92,14 +94,17 @@ public class RepeatPrimerCmd extends CommandLine{
 		SequenceOutputStream pos = SequenceOutputStream
 				.makeOutputStream(primerFile);
 		Sequence wSeq = null;
+
+		Logging.info("Read sequence from " + input);
 		while ((seq = reader.nextSequence(Alphabet.DNA16())) != null) {
 			genomes.put(seq.getName(), seq);
 			if (wSeq == null)
 				wSeq = seq;
 		}
 		reader.close();
-		seq = wSeq;
+		Logging.info("Read sequence done");
 
+		seq = wSeq;
 		// Reader in tr
 		BufferedReader bf = SequenceReader.openFile(cmdLine.getStringVal("tr"));
 		ArrayList<TandemRepeat> trList = TandemRepeat.readFromFile(bf, null);
@@ -107,6 +112,7 @@ public class RepeatPrimerCmd extends CommandLine{
 
 		// Get sequence information
 		for (TandemRepeat tr : trList) {
+			Logging.info("Process  " + tr.getID());
 			if (!seq.getName().equals(tr.getChr())) {
 				seq = genomes.get(tr.getChr());
 			}
@@ -139,10 +145,26 @@ public class RepeatPrimerCmd extends CommandLine{
 		pos.close();
 		// Run primer 3
 
-		Process process = Runtime
-				.getRuntime()
-				.exec("primer3_core -p3_settings_file=settings -output=primer3.out -error=primer.error pinput");
-		process.waitFor();
+		final File tmpFile = File.createTempFile("out", null);
+		tmpFile.deleteOnExit();
+
+		String primerExe = "primer3_core";		
+		ProcessBuilder pb = new ProcessBuilder(primerExe, 
+				"-p3_settings_file=settings", 
+				"-output=primer3.out",
+				"-error=primer.error",
+				"pinput"
+				).redirectErrorStream(true).redirectInput(tmpFile);
+
+		Process process = pb.start();
+		int status = process.waitFor();
+		if (status ==0 ){			
+			Logging.info("Successfully run primer3");
+			//continue;
+		}else{
+			Logging.exit("Run primer 3 FAIL",1);
+		}
+
 		// Reat the output
 		bf = SequenceReader.openFile("primer3.out");
 
@@ -187,55 +209,42 @@ public class RepeatPrimerCmd extends CommandLine{
 				- 1;
 			} else if (toks[0].equals("PRIMER_RIGHT_" + index)) {
 				int x = toks[1].indexOf(',');
-				rightPos = seqOffset
-						+ Integer.parseInt(toks[1].substring(0, x))
-						- right.length();
+				rightPos = seqOffset + Integer.parseInt(toks[1].substring(0, x))
+				- right.length();
 			} else if (toks[0].equals("PRIMER_PAIR_" + index + "_PRODUCT_SIZE")) {
-				/****************************************************************************
-				 * String readName = name.replaceFirst("#", "#"+index+"#") + "#"
-				 * + leftPos + "#"+rightPos + "#"+toks[1];
-				 * 
-				 * fq1.print("@"+readName+"\n"+left+"\n+\n"); for (int i = 0; i<
-				 * left.length(); i++) fq1.print('I'); fq1.print('\n');
-				 * 
-				 * fq2.print("@"+readName+"\n"+right+"\n+\n");
-				 * //fq2.print("@"+name
-				 * +"#"+index+"#"+toks[1]+"\n"+right+"\n+\n"); for (int i = 0;
-				 * i< right.length(); i++) fq2.print('I'); fq2.print('\n'); /
-				 ****************************************************************************/
+
 				int x = name.indexOf('#');
 				String seqID = name.substring(x + 1);
 				if (!seq.getName().equals(seqID)) {
 					seq = genomes.get(seqID);
 				}
 				if (seq == null) {
-					throw new RuntimeException("Sequence " + seqID
-							+ " not found");
+					throw new RuntimeException("Sequence " + seqID	+ " not found");
 				}
-				rightPos -= pad;
+				//rightPos -= pad;
 				String readName = name.replaceFirst("#", "#" + index + "#")
 						+ "#" + leftPos + "#" + rightPos + "#" + toks[1];
 				fq1.print("@" + readName + "\n");
 
-				for (int i = 0; i < left.length() + pad; i++) {
+				for (int i = 0; i < left.length(); i++) {//+pad
 					fq1.print(seq.charAt(i + leftPos - 1));
 				}
 				fq1.print("\n+\n");
 
-				for (int i = 0; i < left.length() + pad; i++) {
+				for (int i = 0; i < left.length(); i++) {//pad
 					fq1.print('I');
 				}
 				fq1.print('\n');
 
 				Alphabet.DNA alphabet = (Alphabet.DNA) seq.alphabet();
 				fq2.print("@" + readName + "\n");
-				for (int i = right.length() + pad - 1; i >= 0; i--) {
+				for (int i = right.length() - 1; i >= 0; i--) { //+pad
 					fq2.print(alphabet.int2char(alphabet.complement(seq
 							.getBase(i + rightPos - 1))));
 				}
 				fq2.print("\n+\n");
 
-				for (int i = right.length() + pad - 1; i >= 0; i--) {
+				for (int i = right.length() - 1; i >= 0; i--) {//+pad
 					fq2.print('I');
 				}
 				fq2.print('\n');
@@ -248,24 +257,61 @@ public class RepeatPrimerCmd extends CommandLine{
 		fq1.close();
 		fq2.close();
 		// Run bwa to make sure
-		/*******************************************************************
-		 * String cmd = "bwa aln " + input + " 1.fq > 1.sai"; process =
-		 * Runtime.getRuntime().exec(cmd);
-		 * 
-		 * process.getErrorStream().close(); process.getInputStream().close();
-		 * 
-		 * process.waitFor(); Logging.info("Running " + cmd);
-		 * 
-		 * 
-		 * cmd = "bwa aln " + input + " 2.fq > 2.sai"; process =
-		 * Runtime.getRuntime().exec(cmd); process.getErrorStream().close();
-		 * process.getInputStream().close(); process.waitFor();
-		 * Logging.info("Running " + cmd);
-		 * 
-		 * cmd = "bwa sampe -f a.sam " + input + " 1.sai 2.sai 1.fq 2.fq";
-		 * process = Runtime.getRuntime().exec(cmd);
-		 * process.getErrorStream().close(); process.getInputStream().close();
-		 * process.waitFor(); Logging.info("Running " + cmd); /
-		 *******************************************************************/
+		/*******************************************************************/
+
+		String bwaExe = "bwa";
+		pb = new ProcessBuilder(bwaExe, 
+				"aln",
+				"-o",
+				"0",
+				"-l",
+				"16",
+				"-k",
+				"0",
+				"-f",
+				"1.sai",
+				input,				
+				"1.fq"
+				).redirectErrorStream(true).redirectOutput(tmpFile);
+
+		Logging.info("Run: " + pb.command());
+		process = pb.start();
+		status = process.waitFor();
+
+		pb = new ProcessBuilder(bwaExe, 
+				"aln",
+				"-o",
+				"0",
+				"-l",
+				"16",
+				"-k",
+				"0",				
+				"-f",
+				"2.sai",
+				input,				
+				"2.fq"
+				).redirectErrorStream(true).redirectOutput(tmpFile);
+
+		Logging.info("Run: " + pb.command());
+		process = pb.start();
+		status = process.waitFor();		
+
+		pb = new ProcessBuilder(bwaExe, 
+				"sampe",
+				"-a",
+				"2000",
+				"-f",
+				"a.sam",
+				input,	
+				"1.sai",
+				"2.sai",
+				"1.fq",
+				"2.fq"
+				).redirectErrorStream(true)
+				.redirectOutput(tmpFile);
+
+		Logging.info("Run: " + pb.command());
+		process = pb.start();
+		status = process.waitFor();
 	}
 }
